deploy/zot/kubernetes.yaml
kind: Namespace
metadata:
  name: zot
  labels:
    app.kubernetes.io/part-of: zot
    app.kubernetes.io/managed-by: kpt
    app.kubernetes.io/name: zot
  annotations:
    config.kubernetes.io/origin: "\tmono/deploy/zot/*.cue"
apiVersion: v1
---
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      appProtocol: http
      targetPort: http
  selector:
    app.kubernetes.io/name: zot
kind: Service
apiVersion: v1
metadata:
  name: zot
  namespace: zot
  annotations:
    config.kubernetes.io/origin: "\tmono/deploy/zot/*.cue"
  labels:
    app.kubernetes.io/part-of: zot
    app.kubernetes.io/managed-by: kpt
    app.kubernetes.io/name: zot
---
kind: Deployment
metadata:
  name: zot
  namespace: zot
  labels:
    app.kubernetes.io/part-of: zot
    app.kubernetes.io/managed-by: kpt
    app.kubernetes.io/name: zot
  annotations:
    config.kubernetes.io/origin: "\tmono/deploy/zot/*.cue"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: zot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zot
    spec:
      containers:
        - image: ""
          name: zot
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /etc/zot
              name: config
            - mountPath: /var/run/secrets/zot
              name: secrets
      volumes:
        - hostPath:
            path: /opt/volumes/zot
          name: data
        - configMap:
            name: zot
          name: config
        - secret:
            secretName: zot
          name: secrets
      enableServiceLinks: false
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
apiVersion: apps/v1
---
kind: HTTPRoute
spec:
  hostnames:
    - registry.liao.dev
  parentRefs:
    - name: http-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: zot
          port: 80
metadata:
  name: zot
  namespace: zot
  labels:
    app.kubernetes.io/part-of: zot
    app.kubernetes.io/managed-by: kpt
    app.kubernetes.io/name: zot
  annotations:
    config.kubernetes.io/origin: "\tmono/deploy/zot/*.cue"
apiVersion: gateway.networking.k8s.io/v1
